--- a/blog.html
+++ b/blog.html
@@ -24,7 +24,7 @@
         <div>
             <a href="index.html">Link back to assignment 1!</a>
         </div>
-        <h3>What came easy:</h2>
+        <h3>What came easy:</h3>
         <ul>
             <li>Learning HTML & Basic CSS</li>
             <li>Working with HTML and Managing some different variables with CSS</li>
@@ -46,5 +46,38 @@
         </ul>
 
     </div>
+
+    <div>
+        <h2>
+            Assignment - 2
+        </h2>
+        
+    <h3>"Benny's List" (CSS Edition)</h3>
+
+    <h3>What came easy:</h3>
+    <ul>
+        <li>Simple movement of items on the page</li>
+        <li>Font Management </li>
+        <li>Writing the code itself</li>
+    </ul>
+
+    <h3>What were some difficulties:</h3>
+    <ul>
+        <li> I accidentally had my screen set to 80% zoom for 95% of my writing of the program so I had to resize EVERYTHING</li>
+        <li> Getting the actual benny's list banner to go completely black on top</li>
+        <li> Remembering very small tips for some of the commands possible with CSS EX: how to properly use border</li>
+    </ul>
+    </div>
+    <div>
+        <h2>Resources Used:</h2>
+        <ul>
+            <li>Knowledge taught in CS290</li>
+        </ul>
+
+    </div>
+
+
+
+
     </body>
 </html>
