--- a/blog.html
+++ b/blog.html
@@ -35,7 +35,9 @@
         <ul>
             <li>Managing more advanced CSS systems like the background url for my photo</li>
             <li>I could not manage to get my Main title to be centered and highlighted with the knowledge taught in class.</li>
-            <li>Managing specific combinations of CSS and HTML like for instance doing an inline highlight mixed with centering doesn't tend to work without work arounds, and sometimes you can come to issues where if you miss one semicolon when making a global h1 color / italic etc then it can just error out and not show any of the italics or highlights.
+            <li>Managing specific combinations of CSS and HTML like for instance doing an inline highlight mixed with centering doesn't tend to 
+                work without work arounds, and sometimes you can come to issues where if you miss one semicolon when making a global h1 color / italic etc 
+                then it can just error out and not show any of the italics or highlights.
             </li>
         </ul>
     </div>
@@ -46,6 +48,8 @@
         </ul>
 
     </div>
+    <br>
+    <br>
 
     <div>
         <h2>
