--- a/blog.html
+++ b/blog.html
@@ -84,4 +84,71 @@
 
 
     </body>
+    <div>
+        <h2>
+            Assignment - 2
+        </h2>
+        
+    <h3>"Benny's List" (CSS Edition)</h3>
+
+    <h3>What came easy:</h3>
+    <ul>
+        <li>Simple movement of items on the page</li>
+        <li>Font Management </li>
+        <li>Writing the code itself</li>
+    </ul>
+
+    <h3>What were some difficulties:</h3>
+    <ul>
+        <li> I accidentally had my screen set to 80% zoom for 95% of my writing of the program so I had to resize EVERYTHING</li>
+        <li> Getting the actual benny's list banner to go completely black on top</li>
+        <li> Remembering very small tips for some of the commands possible with CSS EX: how to properly use border</li>
+    </ul>
+    </div>
+    <div>
+        <h2>Resources Used:</h2>
+        <ul>
+            <li>Knowledge taught in CS290</li>
+        </ul>
+
+    </div>
+
+
+
+
+    </body>
+    <div>
+        <h2>
+            Assignment - 3 "Java Script Conundrum"
+        </h2>
+        
+    <h3>"Benny's List" (JS Edition)</h3>
+
+    <h3>What came easy:</h3>
+    <ul>
+        <li>General managing of the modal, creation of new items, and basic management of information between the objects</li>
+        <li>Remembering how to navigate between child and ancestor </li>
+        <li>Rememberng the var tag Haha!</li>
+    </ul>
+
+    <h3>What were some difficulties:</h3>
+    <ul>
+        <li>Learning how to grab elements from deep parts of the html like the condition buttons</li>
+        <li> I completely forgot about  query until the very end of my assignment time</li>
+        <li> Remembering very small details like how to find an exact text content for what I wanted</li>
+    </ul>
+    </div>
+    <div>
+        <h2>Resources Used/Reccomended for coding:</h2>
+        <ul>
+            <li>Knowledge taught in CS29</li>
+            <li>stackOverflow for uses on checkboxes</li>
+        </ul>
+
+    </div>
+
+
+
+
+    </body>
 </html>
