--- a/blog.html
+++ b/blog.html
@@ -145,6 +145,26 @@
             <li>stackOverflow for uses on checkboxes</li>
         </ul>
 
+        <h3>"Benny's List" (Handlebars Edition)</h3>
+
+    <h3>What came easy:</h3>
+    <ul>
+        <li>Managing workflow for this project</li>
+        <li>Pretty much everything else was fairly easily especially if I follow Professor Hess's videos.</li>
+       
+    </ul>
+
+    <h3>What were some difficulties:</h3>
+    <ul>
+        <li>Figuring out how to precisely mix with the server and js html (Adding posts depending on url)/li>
+        
+    </ul>
+    </div>
+    <div>
+        <h2>Resources Used/Reccomended for coding:</h2>
+        <ul>
+            <li>Knowledge taught in CS29</li>
+        </ul>
     </div>
 
 
