--- a/blog.html
+++ b/blog.html
@@ -144,7 +144,10 @@
             <li>Knowledge taught in CS29</li>
             <li>stackOverflow for uses on checkboxes</li>
         </ul>
-
+        <div>
+            <h2>
+                Assignment - 5 "Server frenzy"
+            </h2>
         <h3>"Benny's List" (Handlebars Edition)</h3>
 
     <h3>What came easy:</h3>
