--- a/blog.html
+++ b/blog.html
@@ -159,7 +159,7 @@
 
     <h3>What were some difficulties:</h3>
     <ul>
-        <li>Figuring out how to precisely mix with the server and js html (Adding posts depending on url)/li>
+        <li>Figuring out how to precisely mix with the server and js html (Adding posts depending on url)</li>
         
     </ul>
     </div>
